--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
+    "sharp": "^0.34.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
